@@ -387,119 +387,121 @@ def cluster(leftchrnamelist,
                     reads2 = rightcluster2read[coord2[:-1]]
                 else:
                     raise Exception('Error: Coord %s did not specify direction' % coord2)
-                readlist0 = sorted(set(reads1).intersection(reads2))  # Get reads that intersect with both clusters
-                readlist = [x for x in readlist0 if x not in pastbps]
                 if coord[-1] in ['l', 'r']:
                     coord = coord[:-1]
                 coord2 = coord2[:-1]
-                if readlist:
-                    for i in readlist:
-                        pastbps[i] = 1
-                    if not hsb_switch:
-                        # for read in sorted(set(reads1).difference(reads2)) + sorted(set(reads2).difference(reads1)):
-                        #     if classdict[read] == 'bp_Nov_Ins':
-                        #         if read not in pastbps:
-                        #             readlist.append(read)
-                        #             pastbps[read] = 1
-                        # lead, main = leadread(sorted(set(readlist)), svsizedict, classdict, hsb_switch)
-                        # # Filter 2
-                        # # Delete cluster if it is supported by <mincov or 2 number of reads, else if it is <100 bp
-                        # if main == 'Del':
-                        #     if len({x.rsplit('~', 1)[0] for x in readlist}) >= min(2, mincov):
-                        #         cluster_parse[coord + '-' + coord2 + '~' + main] = sorted(readlist)
-                        #     else:
-                        #         if svsizedict[readlist[0]] >= 100:  # Arbituary threshold for small deletions
-                        #             cluster_parse[coord + '-' + coord2 + '~' + main] = sorted(readlist)
-                        # elif main == 'Nov_Ins':
-                        #     if len({x.rsplit('~', 1)[0] for x in readlist}) >= min(2, mincov):
-                        #         avg_coord = coord.split(':')[0] + ':' + \
-                        #                     str(int(round((int(coord.split(':')[1]) + int(coord2.split(':')[1])) / 2, 0)))
-                        #         cluster_parse[avg_coord + '~' + main] = sorted(readlist)
-                        #     else:
-                        #         if svsizedict[readlist[0]] >= 100:  # Arbituary threshold for small insertions
-                        #             avg_coord = coord.split(':')[0] + ':' + \
-                        #                         str(int(round((int(coord.split(':')[1]) + int(coord2.split(':')[1])) / 2, 0)))
-                        #             cluster_parse[avg_coord + '~' + main] = sorted(readlist)
-                        # else:
-                        #     cluster_parse[coord + '-' + coord2 + '~' + main] = sorted(readlist)
-                        pass
-                    else:
-                        lead, main, med_size = leadread(sorted(set(readlist)), svsizedict, classdict, hsb_switch)
-                        # Check for reads exclusive to each left/right cluster and add them into readlist if conditions satisfied
-                        for read in sorted(set(reads1).difference(reads2)) + sorted(set(reads2).difference(reads1)):
-                            if classdict[read] == 'bp_Nov_Ins':
-                                if read not in pastbps:
-                                    readlist.append(read)
-                                    pastbps[read] = 1
-                            else:
-                                if main == 'Del':
-                                    if classdict[read] in ['Del']:
-                                        if read not in pastbps:
-                                            readlist.append(read)
-                                            pastbps[read] = 1
-                                elif main in ['Intra-Ins', 'Intra-Ins2']:
-                                    if classdict[read] in ['Nov_Ins', 'Intra-Ins', 'Intra-Ins2']:
-                                        if read not in pastbps:
-                                            readlist.append(read)
-                                            pastbps[read] = 1
-                                elif main in ['Inter', 'Inter-Ins']:
-                                    if classdict[read] in ['Nov_Ins', 'Inter', 'Inter-Ins']:
-                                        if read not in pastbps:
-                                            readlist.append(read)
-                                            pastbps[read] = 1
-                                elif main in ['Inv', 'Inv2']:
-                                    if classdict[read] in ['Nov_Ins', 'Inv', 'Inv2']:
-                                        if read not in pastbps:
-                                            readlist.append(read)
-                                            pastbps[read] = 1
-                                elif main in 'TDupl':
-                                    if classdict[read] in ['Nov_Ins', 'TDupl']:
-                                        if read not in pastbps:
-                                            readlist.append(read)
-                                            pastbps[read] = 1
-                                elif main == 'Nov_Ins':
-                                    if classdict[read] in ['Intra-Ins', 'Intra-Ins2', 'Inter', 'Inter-Ins', 'TDupl']:
-                                        if read not in pastbps:
-                                            readlist.append(read)
-                                            pastbps[read] = 1
+                #readlist0 = sorted(set(reads1).intersection(reads2))  # Get reads that intersect with both clusters
+                readlists = separate_cluster_type(reads1, reads2, classdict)                
+                if readlists:
+                    for _readlist in readlists:
+                        readlist = [x for x in _readlist if x not in pastbps]
+                        for i in readlist:
+                            pastbps[i] = 1
+                        if not hsb_switch:
+                            # for read in sorted(set(reads1).difference(reads2)) + sorted(set(reads2).difference(reads1)):
+                            #     if classdict[read] == 'bp_Nov_Ins':
+                            #         if read not in pastbps:
+                            #             readlist.append(read)
+                            #             pastbps[read] = 1
+                            # lead, main = leadread(sorted(set(readlist)), svsizedict, classdict, hsb_switch)
+                            # # Filter 2
+                            # # Delete cluster if it is supported by <mincov or 2 number of reads, else if it is <100 bp
+                            # if main == 'Del':
+                            #     if len({x.rsplit('~', 1)[0] for x in readlist}) >= min(2, mincov):
+                            #         cluster_parse[coord + '-' + coord2 + '~' + main] = sorted(readlist)
+                            #     else:
+                            #         if svsizedict[readlist[0]] >= 100:  # Arbituary threshold for small deletions
+                            #             cluster_parse[coord + '-' + coord2 + '~' + main] = sorted(readlist)
+                            # elif main == 'Nov_Ins':
+                            #     if len({x.rsplit('~', 1)[0] for x in readlist}) >= min(2, mincov):
+                            #         avg_coord = coord.split(':')[0] + ':' + \
+                            #                     str(int(round((int(coord.split(':')[1]) + int(coord2.split(':')[1])) / 2, 0)))
+                            #         cluster_parse[avg_coord + '~' + main] = sorted(readlist)
+                            #     else:
+                            #         if svsizedict[readlist[0]] >= 100:  # Arbituary threshold for small insertions
+                            #             avg_coord = coord.split(':')[0] + ':' + \
+                            #                         str(int(round((int(coord.split(':')[1]) + int(coord2.split(':')[1])) / 2, 0)))
+                            #             cluster_parse[avg_coord + '~' + main] = sorted(readlist)
+                            # else:
+                            #     cluster_parse[coord + '-' + coord2 + '~' + main] = sorted(readlist)
+                            pass
+                        else:
+                            lead, main, med_size = leadread(sorted(set(readlist)), svsizedict, classdict, hsb_switch)
+                            # Check for reads exclusive to each left/right cluster and add them into readlist if conditions satisfied
+                            for read in sorted(set(reads1).difference(reads2)) + sorted(set(reads2).difference(reads1)):
+                                if classdict[read] == 'bp_Nov_Ins':
+                                    if read not in pastbps:
+                                        readlist.append(read)
+                                        pastbps[read] = 1
                                 else:
-                                    raise Exception('Error: Main SV type in cluster %s with lead %s is not recognised' %
-                                                    ((coord+coord2), lead))
-                        # Remove duplicate reads from mm
-                        # mm = []
-                        # hsb = []
-                        # for r in readlist:
-                        #     if len(r.rsplit('~', 1)[1]) == 5:  # mm
-                        #         mm.append(r)
-                        #     elif len(r.rsplit('~', 1)[1]) == 4:  # hsb
-                        #         hsb.append(r.rsplit('~', 1)[0])
-                        #     else:
-                        #         raise Exception('Error: %d read has unrecognised unique ID' % r)
-                        # for r in mm:
-                        #     rn = r.rsplit('~', 1)[0]
-                        #     if rn in hsb:
-                        #         if r == lead:
-                        #             # readlist.remove(r)  # Remove blast read if mm read is leader present in read list
-                        #             for rl in readlist:
-                        #                 if rl.rsplit('~', 1)[0] == rn and len(rl.rsplit('~', 1)[1]) == 4:
-                        #                     readlist.remove(rl)
-                        #                     # lead = rl
-                        #                     # main = classdict[rl]
-                        #         else:
-                        #             readlist.remove(r)  # Remove minimap reads if blast reads present in read list
-                        # lead, main = leadread(sorted(set(readlist)), svsizedict, classdict, hsb_switch)
-                        if main == 'Nov_Ins':
-                            avg_coord = coord.split(':')[0] + ':' + \
-                                        str(int(round((int(coord.split(':')[1]) + int(coord2.split(':')[1])) / 2, 0)))
-                            readteam[avg_coord] = [lead]
-                            readteam[avg_coord].extend(sorted(set(readlist).difference([lead])))  # Append remaining reads
-                            mainclass[avg_coord] = main
-                            ins_median_size[avg_coord] = med_size
-                        else:  # Else include both coord into cluster label
-                            readteam[coord + '-' + coord2] = [lead]
-                            readteam[coord + '-' + coord2].extend(
-                                sorted(set(readlist).difference([lead])))  # Append remaining reads
-                            mainclass[coord + '-' + coord2] = main
+                                    if main == 'Del':
+                                        if classdict[read] in ['Del']:
+                                            if read not in pastbps:
+                                                readlist.append(read)
+                                                pastbps[read] = 1
+                                    elif main in ['Intra-Ins', 'Intra-Ins2']:
+                                        if classdict[read] in ['Nov_Ins', 'Intra-Ins', 'Intra-Ins2']:
+                                            if read not in pastbps:
+                                                readlist.append(read)
+                                                pastbps[read] = 1
+                                    elif main in ['Inter', 'Inter-Ins']:
+                                        if classdict[read] in ['Nov_Ins', 'Inter', 'Inter-Ins']:
+                                            if read not in pastbps:
+                                                readlist.append(read)
+                                                pastbps[read] = 1
+                                    elif main in ['Inv', 'Inv2']:
+                                        if classdict[read] in ['Nov_Ins', 'Inv', 'Inv2']:
+                                            if read not in pastbps:
+                                                readlist.append(read)
+                                                pastbps[read] = 1
+                                    elif main in 'TDupl':
+                                        if classdict[read] in ['Nov_Ins', 'TDupl']:
+                                            if read not in pastbps:
+                                                readlist.append(read)
+                                                pastbps[read] = 1
+                                    elif main == 'Nov_Ins':
+                                        if classdict[read] in ['Intra-Ins', 'Intra-Ins2', 'Inter', 'Inter-Ins', 'TDupl']:
+                                            if read not in pastbps:
+                                                readlist.append(read)
+                                                pastbps[read] = 1
+                                    else:
+                                        raise Exception('Error: Main SV type in cluster %s with lead %s is not recognised' %
+                                                        ((coord+coord2), lead))
+                            # Remove duplicate reads from mm
+                            # mm = []
+                            # hsb = []
+                            # for r in readlist:
+                            #     if len(r.rsplit('~', 1)[1]) == 5:  # mm
+                            #         mm.append(r)
+                            #     elif len(r.rsplit('~', 1)[1]) == 4:  # hsb
+                            #         hsb.append(r.rsplit('~', 1)[0])
+                            #     else:
+                            #         raise Exception('Error: %d read has unrecognised unique ID' % r)
+                            # for r in mm:
+                            #     rn = r.rsplit('~', 1)[0]
+                            #     if rn in hsb:
+                            #         if r == lead:
+                            #             # readlist.remove(r)  # Remove blast read if mm read is leader present in read list
+                            #             for rl in readlist:
+                            #                 if rl.rsplit('~', 1)[0] == rn and len(rl.rsplit('~', 1)[1]) == 4:
+                            #                     readlist.remove(rl)
+                            #                     # lead = rl
+                            #                     # main = classdict[rl]
+                            #         else:
+                            #             readlist.remove(r)  # Remove minimap reads if blast reads present in read list
+                            # lead, main = leadread(sorted(set(readlist)), svsizedict, classdict, hsb_switch)
+                            if main == 'Nov_Ins':
+                                avg_coord = coord.split(':')[0] + ':' + \
+                                            str(int(round((int(coord.split(':')[1]) + int(coord2.split(':')[1])) / 2, 0)))
+                                readteam[avg_coord] = [lead]
+                                readteam[avg_coord].extend(sorted(set(readlist).difference([lead])))  # Append remaining reads
+                                mainclass[avg_coord] = main
+                                ins_median_size[avg_coord] = med_size
+                            else:  # Else include both coord into cluster label
+                                readteam[coord + '-' + coord2] = [lead]
+                                readteam[coord + '-' + coord2].extend(
+                                    sorted(set(readlist).difference([lead])))  # Append remaining reads
+                                mainclass[coord + '-' + coord2] = main
     # Filter 2
     # Delete cluster if it is supported by <mincov or 2 number of reads
     if hsb_switch:
@@ -516,6 +518,21 @@ def cluster(leftchrnamelist,
     else:
         return readteam, mainclass, ins_median_size
 
+# Separate clusters by per read svtype (this would deprecate mainclasssv)
+def separate_cluster_type(reads1, reads2, classdict):
+    intersect = sorted(set(reads1).intersection(reads2))
+    cluster_class_dict = {}
+    for read in intersect:
+        svtype = classdict[read]
+        if svtype[0:3] not in cluster_class_dict:  # Taking first 3 element of svtype (E.g. Inv2 -> Inv)
+            cluster_class_dict[svtype[0:3]] = [read]
+        else:
+            cluster_class_dict[svtype[0:3]].append(read)
+    _readlists = []
+    for svtype in cluster_class_dict:
+        if len(cluster_class_dict[svtype]) >=2:
+            _readlists.append(cluster_class_dict[svtype])
+    return _readlists
 
 def leadread(reads, svsizedict, classdict, hsb_switch):
     mainsvclass = mainclasssv(reads, classdict, hsb_switch)
